--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shahzaiblodhi21.github.io/shahzaib-tv",
   "name": "shahzaib-tv",
   "version": "0.1.0",
   "private": true,
